# pytest-indigo

./: .gitignore  INDIGO_COVERAGE.md  README.md  environment.yaml  indigo_coverage.sh  pyproject.toml
.github/workflows/: ci.yaml  test.yaml
indigo-stubs/: __init__.pyi  utils.pyi
src/pytest_indigo/: __init__.py  mock.py
src/pytest_indigo/indigo/: __init__.py  base.py  collections.py  data.py
tests/: conftest.py
tests/integration/basic_plugin/: plugin.py
tests/integration/basic_plugin/tests/: test_plugin.py
tests/unit/: test_test.py
tests/unit/indigo/: test_base.py  test_collections.py  test_data.py
